[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/Baloo_Bhaina_2/main_menu.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/transitions/Credits.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Baloo_Bhaina_2/normal_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/buttons/new_default.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 200, 100 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 200, 0, 200, 100 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 200, 100 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": false,
"name": "press",
"speed": 24.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[node name="Credits" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 719.801 ],
"_edit_vertical_guides_": [ 1279.89 ]
}

[node name="Label1" type="Label" parent="."]
margin_left = 10.2154
margin_top = 265.65
margin_right = 547.215
margin_bottom = 520.65
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Created by meburns
using Godot Engine"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 743.584
margin_top = 262.544
margin_right = 1266.58
margin_bottom = 517.544
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Heavily Inspired by
Wanderlands' Midas"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="RichTextLabel" parent="."]
margin_left = 352.91
margin_top = 34.2731
margin_right = 875.91
margin_bottom = 240.273
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center][wave freq=3]MIDAS[/wave][/center]"
text = "MIDAS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 454.071
margin_top = 527.651
margin_right = 833.071
margin_bottom = 704.651
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="BackButton"]
position = Vector2( 191.755, 83.3403 )
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
animation = "idle"

[node name="Label" type="Label" parent="BackButton"]
margin_left = 4.75513
margin_top = -4.65973
margin_right = 376.755
margin_bottom = 175.34
custom_fonts/font = ExtResource( 3 )
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="BackButton" to="." method="_on_BackButton_button_down"]
[connection signal="button_up" from="BackButton" to="." method="_on_BackButton_button_up"]
